# src/server.ts
@@ -3,11 +3,11 @@ import { userRoute } from './api/user/user.route';
 import { ValidateEnv } from './utils/validateEnv';
 import { authRoute } from './api/auth/auth.route';
 import { storeRoute } from './api/store/store.route';
-// import { CategoryRoute } from './api/category/category.route';
-// import { ProductRoute } from './api/product/product.route';
+import { categoryRoute } from './api/category/category.route';
+import { productRoute } from './api/product/product.route';
 // import { OrderRoute } from './api/order/order.route';
 // import { ToBuyRoute } from './api/toBuy/toBuy.route';
-// import { CartRoute } from './api/cart/cart.route';
+import { cartRoute } from './api/cart/cart.route';
 import { paymentRoute } from './api/payment/payment.route';
 
 ValidateEnv();
@@ -16,12 +16,12 @@ const app = new App([
   authRoute,
   storeRoute,
   userRoute,
-  paymentRoute
+  paymentRoute,
+  cartRoute,
+  categoryRoute,
+  productRoute
   // new OrderRoute(),
-  // new ProductRoute(),
-  // new CartRoute(),
   // new ToBuyRoute(),
-  // new CategoryRoute()
 ]);
 
 // const app = new App([
