# swagger.yaml
@@ -355,6 +355,10 @@ paths:
         '500':
           description: Internal server error
 
+  #################
+  # Product API #
+  #################
+
   /products:
     post:
       tags:
@@ -401,6 +405,21 @@ paths:
           description: Unauthorized
         '500':
           description: Internal server error
+          
+    get:
+      tags:
+        - Product
+      summary: Get all products
+      description: Get all the products
+      operationId: getAllProducts
+      responses:
+        '200':
+          description: Successful operation
+        '401':
+          description: Unauthorized
+        '500':
+          description: Internal server error
+
 
  #################
   # User API #
